# planova

./: .gitignore  CHANGELOG.md  PRD.md  README.md  README.zh_CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: docs.yml
backend/: requirements.txt
backend/app/: config.py  database.py  logging_config.py  main.py  storage.py
docs/: docusaurus.config.ts  furniture-planner.en-US.md  furniture-planner.zh-CN.md  package.json  pipeline.en-US.md  pipeline.zh-CN.md  pnpm-lock.yaml  sidebars.ts
docs/docs/: intro.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  models.rs  settings.rs  storage.rs  util.rs
src-tauri/src/ai/: audit.rs  client.rs  mod.rs  prompts.rs
src-tauri/src/commands/: files.rs  mod.rs  projects.rs  renders.rs  scenes.rs  settings.rs  tasks.rs
src-tauri/src/pipeline/: alignment.rs  convert.rs  furniture.rs  mod.rs  normalizer.rs  overlay.rs  overlay_alignment.rs  plan_graph.rs  preprocess.rs  repair.rs  test_e2e.rs  validate.rs  wall_graph.rs  wall_mask.rs
src/api/: client.ts  files.ts  projects.ts  scenes.ts  settings.ts  tasks.ts
src/data/: demoProjects.ts  furnitureCatalog.ts  furnitureLayout.ts  stylePalettes.ts  testScenes.ts
src/engine/: buildCeilings.ts  buildFloors.ts  buildObjects.ts  buildOpenings.ts  buildScene.ts  buildWalls.ts  deleteObject.ts  exportScene.ts  furnitureModels.ts  geometryUtils.ts  materials.ts  proceduralTextures.ts  shaderMaterials.ts
src/i18n/: index.ts
src/pages/: ProjectDashboard.tsx  (+3 more)
(+117 files in other folders)
